# bug-navigation-ros2

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh
a_star_planner/: package.xml  setup.py
a_star_planner/a_star_planner/: a_star.py  a_star_planner_node.py  laser_grid_mapper_node.py  path_follower_node.py
a_star_planner/launch/: a_star.launch.py
bug_navigation/: config.rviz  package.xml  setup.cfg  setup.py
bug_navigation/bug_navigation/: bug0_planner.py  bug1_planner.py  bug_planner.py
bug_navigation/launch/: bug0.launch.py  bug1.launch.py
robot_bringup/: package.xml  setup.py
robot_bringup/config/: robot.rviz
robot_bringup/launch/: simulation.launch.py
rtabmap_diff_drive_tutorial/: package.xml  setup.cfg  setup.py
rtabmap_diff_drive_tutorial/config/: rtabmap.rviz
rtabmap_diff_drive_tutorial/launch/: robot_simulation.launch.py  rtabmap.launch.py  rtabmap_no_mapping.launch.py
rtabmap_diff_drive_tutorial/urdf/: robot.urdf (copy).xacro.nolaser
rtabmap_diff_drive_tutorial/worlds/: test.world
